@@ -1,5 +1,9 @@
 2010-02-21  Chong Yidong  <cyd@stupidchicken.com>
 
+	* htmlfontify.el (htmlfontify): Doc fix.
+
+	* eshell/eshell.el (eshell): Doc fix.
+
 	* startup.el (fancy-about-screen): In mode-line, apply
 	mode-line-buffer-id face only to the buffer name (Bug#5613).
 
